apps/nwl-wim-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nwl-wim-service
spec:
  selector:
    app: nwl-wim-service
  ports:
    - port: 80
      targetPort: 3000
